--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,14 @@
 spring.application.name=YHFbackend
 
 
-# DB not needed currently
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#
-#spring.jpa.hibernate.ddl-auto=update
-#
-#spring.flyway.enabled=true
-#spring.flyway.locations=classpath:db/migration
-#spring.flyway.baseline-on-migrate=true
+spring.datasource.url=${DB_URL}
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
 
 server.servlet.session.cookie.domain=yetihaulingfreight.com
