--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,9 @@ spring.application.name=YHFbackend
 
 
 spring.datasource.url=${DB_URL}
-spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
