--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 
 server.servlet.session.cookie.domain=yetihaulingfreight.com
+HERE_API_KEY=${HERE_API_KEY}
